<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.lawlett.zingua.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.lawlett.zingua.ui.speaking.SpeakingFragment"
        android:label="Произношение"
        tools:layout="@layout/fragment_speaking" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.lawlett.zingua.ui.listen.ListenFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_listen" />
    <fragment
        android:id="@+id/audioFragment"
        android:name="com.lawlett.zingua.ui.listen.AudioFragment"
        android:label="AudioFragment"
        tools:layout="@layout/fragment_audio"
        />
    <fragment
        android:id="@+id/navigation_grammar"
        android:name="com.lawlett.zingua.ui.grammar.GrammarFragment"
        android:label="@string/title_grammar"
        tools:layout="@layout/fragment_grammar" />
    <fragment
        android:id="@+id/grammarDetailFragment"
        android:name="com.lawlett.zingua.ui.grammar.detail.GrammarDetailFragment"
        android:label="Грамматика"
        tools:layout="@layout/fragment_grammar_detail" />
    <fragment
        android:id="@+id/speakingDetailFragment"
        android:name="com.lawlett.zingua.ui.speaking.SpeakingDetailFragment"
        android:label="fragment_speaking_detail"
        tools:layout="@layout/fragment_speaking_detail" />
    <fragment
        android:id="@+id/quizFragment"
        android:name="com.lawlett.zingua.ui.quiz.QuizFragment"
        android:label="Викторина"
        tools:layout="@layout/fragment_quiz" />

    <fragment
        android:id="@+id/resultFragment"
        android:name="com.lawlett.zingua.ui.result.ResultFragment"
        android:label="Викторина"
        tools:layout="@layout/fragment_result" />


</navigation>